--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@ragarwal33/struct-ts",
+  "name": "struct-ts",
   "version": "1.1.3",
   "description": "C compatible struct with automatic padding and array member support",
   "main": "dist/struct.js",
@@ -14,10 +14,7 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/ragarwal33/struct-ts.git"
-  },
-  "publishConfig": {
-    "registry": "https://npm.pkg.github.com/ragarwal33"
+    "url": "https://github.com/evabits/sw_c_struct_ts_endian"
   },
   "devDependencies": {
     "typescript": "*"
